--- a/templates/two_scale_convergence_tester.cpp.in
+++ b/templates/two_scale_convergence_tester.cpp.in
@@ -32,8 +32,8 @@ namespace flexiblesusy {
 #define OLD(p,i) ol->get_##p()(i)
 #define NEW(p,i) ne->get_##p()(i)
 
-@ModelName@_convergence_tester::@ModelName@_convergence_tester(@ModelName@* model, double accuracy_goal)
-   : Convergence_tester_skeleton<@ModelName@>(model, accuracy_goal)
+@ModelName@_convergence_tester::@ModelName@_convergence_tester(@ModelName@<Two_scale>* model, double accuracy_goal)
+   : Convergence_tester_skeleton<@ModelName@<Two_scale> >(model, accuracy_goal)
 {
 }
 
@@ -43,8 +43,8 @@ namespace flexiblesusy {
 
 double @ModelName@_convergence_tester::max_rel_diff() const
 {
-   const @ModelName@* ol = get_last_iteration_model();
-   const @ModelName@* ne = get_model();
+   const @ModelName@<Two_scale>* ol = get_last_iteration_model();
+   const @ModelName@<Two_scale>* ne = get_model();
 
 @compareFunction@
 }
