--- a/templates/two_scale_utilities.cpp.in
+++ b/templates/two_scale_utilities.cpp.in
@@ -44,7 +44,7 @@ namespace @ModelName@_info {
 }
 
 
-void @ModelName@_spectrum_plotter::extract_spectrum(const @ModelName@& model)
+void @ModelName@_spectrum_plotter::extract_spectrum(const @ModelName@<Two_scale>& model)
 {
    spectrum.clear();
    scale = model.get_scale();
