--- a/templates/two_scale_low_scale_constraint.hpp.in
+++ b/templates/two_scale_low_scale_constraint.hpp.in
@@ -27,6 +27,7 @@
 
 namespace flexiblesusy {
 
+template <class T>
 class @ModelName@;
 
 class @ModelName@_low_scale_constraint : public Constraint<Two_scale> {
@@ -44,7 +45,7 @@ public:
 private:
    double scale;
    double initial_scale_guess;
-   @ModelName@* model;
+   @ModelName@<Two_scale>* model;
    @ModelName@_input_parameters inputPars;
    double new_g1, new_g2, new_g3;
    Eigen::Matrix<double,3,3> new_Yu, new_Yd, new_Ye;
