--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -75,9 +75,9 @@ private:
 template <class T>
 void @ModelName@_runner<T>::run(const @ModelName@_input_parameters& input)
 {
-   @ModelName@_high_scale_constraint high_scale_constraint(input);
-   @ModelName@_susy_scale_constraint susy_scale_constraint(input);
-   @ModelName@_low_scale_constraint  low_scale_constraint(input);
+   @ModelName@_high_scale_constraint<T> high_scale_constraint(input);
+   @ModelName@_susy_scale_constraint<T> susy_scale_constraint(input);
+   @ModelName@_low_scale_constraint<T>  low_scale_constraint(input);
 
    std::vector<Constraint<T>*> upward_constraints;
    upward_constraints.push_back(&low_scale_constraint);
@@ -91,10 +91,10 @@ void @ModelName@_runner<T>::run(const @ModelName@_input_parameters& input)
    model.set_input(input);
 
    @ModelName@_convergence_tester convergence_tester(&model, precision_goal);
-   @ModelName@_initial_guesser initial_guesser(&model, input,
-                                               low_scale_constraint,
-                                               susy_scale_constraint,
-                                               high_scale_constraint);
+   @ModelName@_initial_guesser<T> initial_guesser(&model, input,
+                                                  low_scale_constraint,
+                                                  susy_scale_constraint,
+                                                  high_scale_constraint);
    Two_scale_increasing_precision precision(10.0, precision_goal);
 
    RGFlow<T> solver;
