--- a/templates/two_scale_high_scale_constraint.hpp.in
+++ b/templates/two_scale_high_scale_constraint.hpp.in
@@ -21,6 +21,7 @@
 #ifndef @ModelName@_TWO_SCALE_HIGH_SCALE_CONSTRAINT_H
 #define @ModelName@_TWO_SCALE_HIGH_SCALE_CONSTRAINT_H
 
+#include "@ModelName@_high_scale_constraint.hpp"
 #include "@ModelName@_two_scale_input_parameters.hpp"
 #include "two_scale_constraint.hpp"
 
@@ -29,7 +30,10 @@ namespace flexiblesusy {
 template <class T>
 class @ModelName@;
 
-class @ModelName@_high_scale_constraint : public Constraint<Two_scale> {
+class Two_scale;
+
+template<>
+class @ModelName@_high_scale_constraint<Two_scale> : public Constraint<Two_scale> {
 public:
    @ModelName@_high_scale_constraint();
    @ModelName@_high_scale_constraint(const @ModelName@_input_parameters&);
