--- a/templates/two_scale_initial_guesser_low_scale_model.hpp.in
+++ b/templates/two_scale_initial_guesser_low_scale_model.hpp.in
@@ -21,6 +21,7 @@
 #ifndef @ModelName@_TWO_SCALE_INITIAL_GUESSER_H
 #define @ModelName@_TWO_SCALE_INITIAL_GUESSER_H
 
+#include "@ModelName@_initial_guesser.hpp"
 #include "@ModelName@_two_scale_input_parameters.hpp"
 #include "@ModelName@_two_scale_low_scale_constraint.hpp"
 #include "two_scale_initial_guesser.hpp"
@@ -33,7 +34,10 @@ namespace flexiblesusy {
 template <class T>
 class @ModelName@;
 
-class @ModelName@_initial_guesser : public Initial_guesser<Two_scale> {
+class Two_scale;
+
+template<>
+class @ModelName@_initial_guesser<Two_scale> : public Initial_guesser<Two_scale> {
 public:
 
    class NonPerturbativeRunningError : public Error {
@@ -57,14 +61,14 @@ public:
 
    @ModelName@_initial_guesser(@ModelName@<Two_scale>*,
                                const @ModelName@_input_parameters&,
-                               const @ModelName@_low_scale_constraint&);
+                               const @ModelName@_low_scale_constraint<Two_scale>&);
    virtual ~@ModelName@_initial_guesser();
    virtual void guess();
 
 private:
    @ModelName@<Two_scale>* model;
    @ModelName@_input_parameters input_pars;
-   @ModelName@_low_scale_constraint low_constraint;
+   @ModelName@_low_scale_constraint<Two_scale> low_constraint;
 
    void guess_susy_parameters();
 };
