--- a/templates/run_low_scale_model.cpp.in
+++ b/templates/run_low_scale_model.cpp.in
@@ -43,7 +43,7 @@ int main()
    @ModelName@<algorithm_type> model(input);
    @ModelName@_low_scale_constraint<algorithm_type> low_scale_constraint(input);
    @ModelName@_susy_scale_constraint<algorithm_type> susy_scale_constraint(input);
-   @ModelName@_convergence_tester convergence_tester(&model, 1.0e-5);
+   @ModelName@_convergence_tester<algorithm_type> convergence_tester(&model, 1.0e-5);
    @ModelName@_initial_guesser<algorithm_type> initial_guesser(&model, input, low_scale_constraint);
    Two_scale_constant_precision precision(1.0e-5);
 
