--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -5,17 +5,27 @@ LIB@CLASSNAME@_SRC :=
 
 ifneq ($(findstring two_scale,$(ALGORITHMS)),)
 LIB@CLASSNAME@_SRC += \
+		$(DIR)/run_@CLASSNAME@.cpp \
 		$(DIR)/@CLASSNAME@_two_scale_convergence_tester.cpp \
 		$(DIR)/@CLASSNAME@_two_scale_high_scale_constraint.cpp \
 		$(DIR)/@CLASSNAME@_two_scale_initial_guesser.cpp \
 		$(DIR)/@CLASSNAME@_two_scale_low_scale_constraint.cpp \
 		$(DIR)/@CLASSNAME@_two_scale_model.cpp \
 		$(DIR)/@CLASSNAME@_two_scale_physical.cpp \
-		$(DIR)/run_@CLASSNAME@.cpp \
 		$(DIR)/@CLASSNAME@_two_scale_susy_parameters.cpp \
 		$(DIR)/@CLASSNAME@_two_scale_soft_parameters.cpp \
 		$(DIR)/@CLASSNAME@_two_scale_susy_scale_constraint.cpp \
 		$(DIR)/@CLASSNAME@_two_scale_utilities.cpp
+endif
+
+ifneq ($(findstring lattice,$(ALGORITHMS)),)
+LIB@CLASSNAME@_SRC += \
+		$(DIR)/@CLASSNAME@_lattice_convergence_tester.cpp \
+		$(DIR)/@CLASSNAME@_lattice_high_scale_constraint.cpp \
+		$(DIR)/@CLASSNAME@_lattice_initial_guesser.cpp \
+		$(DIR)/@CLASSNAME@_lattice_low_scale_constraint.cpp \
+		$(DIR)/@CLASSNAME@_lattice_model.cpp \
+		$(DIR)/@CLASSNAME@_lattice_susy_scale_constraint.cpp
 endif
 
 LIB@CLASSNAME@_OBJ := \
