--- a/templates/lattice_initial_guesser_low_scale_model.hpp.in
+++ b/templates/lattice_initial_guesser_low_scale_model.hpp.in
@@ -22,7 +22,7 @@
 #define @ModelName@_LATTICE_INITIAL_GUESSER_H
 
 #include "@ModelName@_initial_guesser.hpp"
-#include "@ModelName@_two_scale_input_parameters.hpp"
+#include "@ModelName@_input_parameters.hpp"
 #include "@ModelName@_lattice_low_scale_constraint.hpp"
 #include "lattice_initial_guesser.hpp"
 
