--- a/templates/lattice_model.hpp.in
+++ b/templates/lattice_model.hpp.in
@@ -22,7 +22,7 @@
 #define @ModelName@_LATTICE_H
 
 #include "@ModelName@_model.hpp"
-#include "@ModelName@_two_scale_input_parameters.hpp"
+#include "@ModelName@_input_parameters.hpp"
 
 #include <iosfwd>
 
