--- a/templates/physical.cpp.in
+++ b/templates/physical.cpp.in
@@ -18,7 +18,7 @@
 
 // File generated at @DateAndTime@
 
-#include "@ModelName@_two_scale_physical.hpp"
+#include "@ModelName@_physical.hpp"
 
 #include <iostream>
 
