--- a/templates/run_low_scale_model.cpp.in
+++ b/templates/run_low_scale_model.cpp.in
@@ -18,13 +18,13 @@
 
 // File generated at @DateAndTime@
 
+#include "@ModelName@_input_parameters.hpp"
+#include "@ModelName@_utilities.hpp"
 #include "@ModelName@_two_scale_model.hpp"
-#include "@ModelName@_two_scale_input_parameters.hpp"
 #include "@ModelName@_two_scale_low_scale_constraint.hpp"
 #include "@ModelName@_two_scale_susy_scale_constraint.hpp"
 #include "@ModelName@_two_scale_convergence_tester.hpp"
 #include "@ModelName@_two_scale_initial_guesser.hpp"
-#include "@ModelName@_two_scale_utilities.hpp"
 
 #include "two_scale_running_precision.hpp"
 #include "two_scale_solver.hpp"
