--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -42,7 +42,7 @@ template <class T>
 class @ModelName@_runner {
 public:
    @ModelName@_runner()
-      : model(), high_scale(0.), susy_scale(0.), low_scale(0.)
+      : solver(), model(), high_scale(0.), susy_scale(0.), low_scale(0.)
       , precision_goal(1.0e-5) {}
    ~@ModelName@_runner() {}
 
@@ -57,6 +57,7 @@ public:
    void write_spectrum(const std::string& filename = "@ModelName@_spectrum.dat") const;
 
 private:
+   RGFlow<T> solver;
    @ModelName@<T> model;
    double high_scale, susy_scale, low_scale;
    double precision_goal; ///< precision goal
@@ -97,7 +98,7 @@ void @ModelName@_runner<T>::run(const @ModelName@_input_parameters& input)
                                                   high_scale_constraint);
    Two_scale_increasing_precision precision(10.0, precision_goal);
 
-   RGFlow<T> solver;
+   solver.reset();
    solver.set_convergence_tester(&convergence_tester);
    solver.set_running_precision(&precision);
    solver.set_initial_guesser(&initial_guesser);
